tests/snapshots/integration_tests__cli_combined_flags.snap
---
source: tests/integration_tests.rs
expression: output.stdout
---
| Name | Age |
| ---: | ---: |
| John | 25 |
| Jane | 30 |
