tests/snapshots/integration_tests__cli_with_complex_csv.snap
---
source: tests/integration_tests.rs
expression: result
---
| Name | Description | Tags |
| --- | --- | --- |
| John | A person with<br>multiple lines | tag1,tag2 |
| Jane | Has \| pipes | simple |
