tests/snapshots/integration_tests__cli_with_custom_delimiter.snap
---
source: tests/integration_tests.rs
expression: output.stdout
---
| Name | Age | City |
| --- | --- | --- |
| John | 25 | NYC |
| Jane | 30 | LA |
