tests/snapshots/integration_tests__cli_with_file_input.snap
---
source: tests/integration_tests.rs
expression: result
---
| Name | Age | City |
| --- | --- | --- |
| John | 25 | NYC |
| Jane | 30 | LA |
