tests/snapshots/integration_tests__cli_with_invalid_alignment.snap
---
source: tests/integration_tests.rs
expression: "format!(\"exit_code: {}\\nstdout: {}\\nstderr: {}\", output.exit_code,\noutput.stdout, output.stderr)"
---
exit_code: 1
stdout: 
stderr: Error: Invalid alignment 'invalid'. Valid options are: left, center, right
