tests/snapshots/integration_tests__cli_with_mixed_quote_styles.snap
---
source: tests/integration_tests.rs
expression: result
---
| Name | Quote |
| --- | --- |
| Shakespeare | To be or not to be |
| Einstein | E=mc² |
| Anonymous | No quotes here |
