tests/snapshots/integration_tests__cli_with_no_headers_flag.snap
---
source: tests/integration_tests.rs
expression: output.stdout
---
| John | 25 | NYC |
| Jane | 30 | LA |
