tests/snapshots/integration_tests__cli_with_single_column.snap
---
source: tests/integration_tests.rs
expression: result
---
| Item |
| --- |
| Apple |
| Banana |
